vars: fix new color variables

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -655,6 +655,8 @@ ac5 = var(--ac-5)
         --payment-status-waiting-rgb: var(--fg-3-rgb) //241,241,242;
         --photopicker-overlay-background: to_rgba('bg-3', 0.8) //#212c31cc;
         --photopicker-overlay-background-rgb: var(--bg-3-rgb) //33,44,49;
+        --picker-background: var(--bg-2) //#2a2f32;
+        --picker-background-rgb: var(--bg-2-rgb) //41.6,47.46667,50.4;
         --popup-panel-background: var(--bg-2) //#080e1233;
         --popup-panel-background-rgb: var(--bg-2-rgb) //8,14,18;
         --primary: var(--fg-2) //#a5aaad;
@@ -667,6 +669,8 @@ ac5 = var(--ac-5)
         --primary-strongest-rgb: var(--fg-0-rgb) //255,255,255;
         --primary-title: var(--fg-2) //#d4d5d7f7;
         --primary-title-rgb: var(--fg-2-rgb) //212,213,215;
+        --product-image-button-background: var(--fg-4) //#f1f1f259;
+        --product-image-button-background-rgb: var(--fg-4-rgb) //241,241,242;
         --product-thumb-background: var(--bg-3) //#1c282f;
         --product-thumb-background-rgb: var(--bg-3-rgb) //28,40,47;
         --product-thumb-background-deeper: var(--bg-2) //#2b3e49;
@@ -743,6 +747,8 @@ ac5 = var(--ac-5)
         --teal-pale-rgb: 95,200,188;
         --thumb-border-active: var(--bg-2) //#75787a;
         --thumb-border-active-rgb: var(--bg-2-rgb) //117,120,122;
+        --thumb-border-active-new-media-editor: var(--fg-4) //#f1f1f2;
+        --thumb-border-active-new-media-editor-rgb: var(--fg-4-rgb) //241,241,242;
         --thumb-border-viewer-active: var(--fg-3) //#75787a;
         --thumb-border-viewer-active-rgb: var(--fg-3-rgb) //117,120,122;
         --toast-background: to_rgba('bg-3', 0.96) //#080e12f5;
