--- a/wa.user.styl
+++ b/wa.user.styl
@@ -1212,11 +1212,14 @@ ac5 = var(--ac-5)
         }
 
         /// Floating emoji picker.
-        > span > ._2I2_W {
-            rad: var(--r-menus) i
-            > ._3G19M {
-                border: 1px solid bg5 i
-                rad: var(--r-menus) i
+        > span > ._3f317 {
+            border: 1px solid bg5 i
+
+            > [data-animate-dropdown-nib] {
+                border-bottom: 1px solid bg5
+                border-right: 1px solid bg5
+                rad: 0 0 4px 0
+                bottom: -8px i
             }
         }
     }
