feat: add adjust options to light color generation

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -178,9 +178,9 @@ OM = next_omsg
         b1 = (BA + 10); b2 = (BA - 05); b3 = (BA - 10); b4 = (BA - 15); b5 = (BA - 20)
         f1 = (FA - 10); f2 = (FA + 10); f3 = (FA + 20); f4 = (FA + 30); f5 = (FA + 40)
     } else {
-        a1 =  10; a2 =  15; a3 =  30; a4 =  60; a5 =  70;
-        b1 = -10; b2 =  08; b3 =  16; b4 =  24; b5 =  32;
-        f1 = -05; f2 = -10; f3 = -15; f4 = -20; f5 = -30;
+        a1 = (AA + 10); a2 = (AA + 20); a3 = (AA + 30); a4 = (AA + 65); a5 = (AA + 75)
+        b1 = (BA - 10); b2 = (BA + 08); b3 = (BA + 16); b4 = (BA + 24); b5 = (BA + 32)
+        f1 = (FA - 05); f2 = (FA - 10); f3 = (FA - 15); f4 = (FA - 20); f5 = (FA - 30)
     }
 
     /// Feat -> Colors for message bubble.
