left: fix selectors for 'set chat wallpaper' area
This was added in WhatsApp's `2.2033.7` update.

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -771,6 +771,8 @@ OM = next_omsg
         --voip-primary-rgb: 255,255,255;
         --voip-reject-background: #e54b40;
         --voip-reject-background-rgb: 229,75,64;
+        --wallpaper-background: var(--bg-1) //#2b93ce;
+        --wallpaper-background-rgb: var(--bg-1-rgb) //13.12731,19.91681,23.57269;
         --win32-title-primary: #fff;
         --win32-title-primary-rgb: 255,255,255;
 
@@ -892,9 +894,8 @@ OM = next_omsg
         }
 
         /// Settings -> Tweaks for 'Set Chat Wallpaper' area. #149
-        /[style *= 'd-color: rgb(237\, 233\, 228)'] {
+        /._3lqL6 {
             position: relative
-            c: 0 0 bg1
 
             /// Override selected wallpaper.
             --blue-light: ac3
