vars: update colors for system messages

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -591,17 +591,17 @@ OM = next_omsg
         --modal-backdrop-solid-rgb: var(--bg-0-rgb) //28,40,47;
         --modal-background: var(--bg-2) //#364147;
         --modal-background-rgb: var(--bg-2-rgb) //54,65,71;
-        --notification-biz-background: var(--bg-0) //#1c282f;
-        --notification-biz-background-rgb: var(--bg-0-rgb) //28,40,47;
-        --notification-biz-text: #55fad9;
-        --notification-biz-text-rgb: 85,250,217;
-        --notification-e2e-background: var(--bg-0) //#1c282f;
-        --notification-e2e-background-rgb: var(--bg-3-rgb) //28,40,47;
-        --notification-e2e-icon: #fad964;
-        --notification-e2e-icon-rgb: 250,217,100;
-        --notification-e2e-text: #fad964;
-        --notification-e2e-text-rgb: 250,217,100;
-        --notification-text: #f1f1f266;
+        --notification-biz-background: var(--bg-2) //#1c282f;
+        --notification-biz-background-rgb: var(--bg-2-rgb) //28,40,47;
+        --notification-biz-text: var(--cyan) //#55fad9;
+        --notification-biz-text-rgb: var(--cyan-rgb) //85,250,217;
+        --notification-e2e-background: var(--bg-2) //#1c282f;
+        --notification-e2e-background-rgb: var(--bg-2-rgb) //28,40,47;
+        --notification-e2e-icon: var(--orange) //#fad964;
+        --notification-e2e-icon-rgb: var(--orange-rgb) //250,217,100;
+        --notification-e2e-text: var(--orange) //#fad964;
+        --notification-e2e-text-rgb: var(--orange-rgb) //250,217,100;
+        --notification-text: var(--fg-3) //#f1f1f266;
         --notification-text-rgb: var(--fg-3-rgb) //241,241,242;
         --outgoing-background: var(--msg-out-0) //#054740;
         --outgoing-background-rgb: var(--msg-out-0-rgb) //5,71,64;
@@ -800,6 +800,8 @@ OM = next_omsg
         --blue-rgb:   to_rgb(blue)
         --yellow:     yellow
         --yellow-rgb: to_rgb(yellow)
+        --cyan:       cyan
+        --cyan-rgb:   to_rgb(cyan)
         --t:          transparent
         --shadow:     sh
         --bshadow:    0 2px 4px var(--shadow)
