landing: fix body text color

--- a/wa.user.styl
+++ b/wa.user.styl
@@ -327,6 +327,8 @@ OM = next_omsg
         /// WA variables.
         --gray-30: var(--bg-5) //#f7f7f7;
         --gray-30-rgb: var(--bg-5-rgb) //247,247,247;
+        --gray-700: var(--fg-4) // #4a4a4a;
+        --gray-700-rgb: var(--fg-4-rgb) // 74,74,74;
         --teal: var(--ac-0) //#009688;
         --teal-rgb: var(--ac-0-rgb) //0,150,136;
         --teal-light: var(--ac-1) //#1de9b6;
